--- a/css/resume2.css
+++ b/css/resume2.css
@@ -1,9 +1,3 @@
-/*!
- * Start Bootstrap - Resume v5.0.8 (https://startbootstrap.com/template-overviews/resume)
- * Copyright 2013-2020 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-resume/blob/master/LICENSE)
- */
-
 body {
     font-family: Muli, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
     padding-top: 54px;
@@ -175,4 +169,28 @@ a:active,
 a:focus,
 a:hover {
     color: #824027
+}
+
+.projectBox {
+    position: relative;
+    margin: 50px;
+    border-radius: 5px;
+    border-color: black;
+    /* background-image: url(/img/minesweepCoin.jpg); */
+    width: 250px;
+    height: 250px;
+}
+
+.projectBox .caption {
+    position: absolute;
+    width: 100%;
+    margin-bottom: 150px;
+    height: 40px;
+    bottom: 10px;
+    left: 0px;
+    color: #000000;
+    background: white;
+    text-align: center;
+    font-weight: bold;
+    /* opacity: 0.25; */
 }
